:construction: form components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "assets/*": ["./assets/*"],
       "components/*": ["./src/components/*"],
       "screens/*": ["./src/screens/*"],
-      "contexts/*": ["./src/contexts"],
+      "contexts/*": ["./src/contexts/*"],
       "theme/*": ["./src/theme/*"],
       "navigations/*": ["./src/navigations/*"],
       "config/*": ["./config/*"],
