--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "dayjs": "^1.10.4",
     "emotion-theming": "^11.0.0",
     "expo": "^41.0.0",
+    "expo-localization": "~10.1.0",
     "expo-status-bar": "~1.0.4",
+    "i18n-js": "^3.8.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^6.14.0",
@@ -36,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/i18n-js": "^3.8.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
