--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "emotion-theming": "^11.0.0",
     "expo": "^41.0.0",
     "expo-localization": "~10.1.0",
+    "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.4",
     "i18n-js": "^3.8.0",
     "react": "16.13.1",
