--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@emotion/native": "^11.0.0",
     "@emotion/react": "^11.1.4",
+    "@expo-google-fonts/inter": "^0.1.0",
+    "@expo-google-fonts/sarabun": "^0.1.0",
     "@hookform/resolvers": "^1.3.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
@@ -21,6 +23,8 @@
     "dayjs": "^1.10.4",
     "emotion-theming": "^11.0.0",
     "expo": "^41.0.0",
+    "expo-app-loading": "^1.0.3",
+    "expo-font": "~9.1.0",
     "expo-localization": "~10.1.0",
     "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.4",
