:arrow_up: upgrade expo sdk to 43

--- a/package.json
+++ b/package.json
@@ -22,32 +22,32 @@
     "@react-navigation/stack": "^5.12.8",
     "dayjs": "^1.10.4",
     "emotion-theming": "^11.0.0",
-    "expo": "^41.0.0",
-    "expo-app-loading": "^1.0.3",
-    "expo-font": "~9.1.0",
-    "expo-localization": "~10.1.0",
-    "expo-secure-store": "~10.1.0",
-    "expo-status-bar": "~1.0.4",
+    "expo": "^43.0.0",
+    "expo-app-loading": "~1.2.1",
+    "expo-font": "~10.0.3",
+    "expo-localization": "~11.0.0",
+    "expo-secure-store": "~11.0.3",
+    "expo-status-bar": "~1.1.0",
     "i18n-js": "^3.8.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-hook-form": "^6.14.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "0.64.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-global-props": "^1.1.5",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-safe-area-context": "3.2.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.0.0",
-    "react-native-web": "~0.13.12",
+    "react-native-screens": "~3.8.0",
+    "react-native-web": "0.17.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "^7.12.9",
     "@types/i18n-js": "^3.8.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
+    "@types/react": "~17.0.21",
+    "@types/react-dom": "~17.0.9",
+    "@types/react-native": "~0.64.12",
     "@types/react-native-global-props": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
@@ -58,7 +58,7 @@
     "husky": "^5.0.4",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
-    "typescript": "~4.0.0"
+    "typescript": "~4.3.5"
   },
   "private": true
 }
