--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo-google-fonts/sarabun": "^0.1.0",
     "@hookform/resolvers": "^1.3.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.7",
-    "@react-navigation/native": "^5.8.10",
-    "@react-navigation/stack": "^5.12.8",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "dayjs": "^1.10.4",
     "emotion-theming": "^11.0.0",
     "expo": "^43.0.0",
     "expo-app-loading": "~1.2.1",
     "expo-font": "~10.0.3",
     "expo-localization": "~11.0.0",
-    "expo-secure-store": "~11.0.3",
     "expo-status-bar": "~1.1.0",
     "i18n-js": "^3.8.0",
     "react": "17.0.1",
