--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "^0.17.5",
     "yup": "^0.32.9"
   },
   "devDependencies": {
